# Guarden

./: .env  .guarden.env  README.md  ai_disclosures.md  ailog.md  compose.dev.yaml  compose.yaml  package-lock.json  package.json
.github/: dependabot.yml
.zed/: settings.json
api-core/: .env  Dockerfile  core_schema.py  db.py  filters.py  logUtil.py  main.py  package-lock.json  package.json  pyproject.toml  s3Client.py
api-core/Types/Auth/: Login.py  Register.py  __init__.py  util.py
api-core/Types/Location/: __init__.py  inputs.py  loader.py  resolvers.py  type.py
api-core/Types/Plant/: __init__.py  inputs.py  loader.py  resolvers.py  type.py
api-core/Types/Tip/: __init__.py  inputs.py  loader.py
api-core/Types/Tips/: __init__.py  inputs.py  loader.py  type.py
api-core/Types/User/: __init__.py  inputs.py  loader.py  type.py
api-core/Types/Vital/: __init__.py  inputs.py  loader.py  type.py
api-core/app/: main.py
api-core/app/database/: db.py  models.py
api-core/app/database/migrations/: env.py
api-core/app/database/migrations/versions/: 25feb43f9b35_create_a_baseline_migrations.py  301470ea38d7_add_generalhealthenum_correctly.py  3f39ad7571e0_create_a_baseline_migrations.py  53b8e3710b3b_add_owner_to_locations.py  ae35d01d18b9_add_lightreqs_and_lightprovided.py  d40d42eb2b99_create_a_baseline_migrations.py
api-core/app/graphql/: mutations.py  queries.py  schema.py
api-core/app/graphql/core/: auth_util.py  filters.py  input_base.py  s3Client.py
api-core/app/graphql/types/: auth.py  location.py  plant.py  tip.py  user.py  vital.py
api-core/migrations/: env.py
api-core/migrations/versions/: 830af94dd1b1_remove_plant_cascade.py  a83ac3d0d4de_add_delete_cascades.py  d777ccaf25bb_add_profile_picture_column.py  ec36a3d4c421_create_a_baseline_migrations.py
api-core/resolvers/: location.py  plant.py
api-core/src/: app.module.ts  main.ts
api-core/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.request.ts  auth.service.ts
api-core/src/auth/dto/: sign-in.dto.ts  sign-up.dto.ts
api-core/src/config/: jwt.config.service.ts  typeorm.config.service.ts
api-core/src/locations/: locations.controller.ts  locations.module.ts  locations.service.ts
api-core/src/locations/dto/: create-location.dto.ts
api-core/src/locations/entities/: location.entity.ts
api-core/src/plants/: plants.controller.ts  plants.module.ts  plants.service.ts
api-core/src/plants/entities/: plant.entity.ts
api-core/src/qr-codes/: qr-codes.controller.ts  qr-codes.service.ts
api-core/src/routines/: routines.controller.ts  routines.service.ts
api-core/src/schedules/: schedules.controller.ts  schedules.service.ts
api-core/src/schedules/entities/: schedule.entity.ts
api-core/src/tips/: tips.controller.ts  tips.module.ts  tips.service.ts
api-core/src/tips/dto/: create-tip.dto.ts
api-core/src/tips/entities/: tip.entity.ts
api-core/src/users/: users.controller.ts  users.service.ts
api-core/src/users/dto/: create-user.dto.ts
api-core/src/users/entities/: user.entity.ts
api-core/src/vitals/: vitals.controller.ts  vitals.module.ts  vitals.service.ts
api-core/src/vitals/dto/: create-vital.dto.ts  update-vital.dto.ts
api-core/src/vitals/entities/: vital.entity.ts
api-vision/: Dockerfile  pyproject.toml  requirements.txt
api-vision/app/: main.py
api-vision/app/internal/: visionProcessor.py
app/: Dockerfile  package.json
dashboard/: .cta.json  .env  DevDockerfile  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  (+3 more)
dashboard-mock/: README.md  index.html  package-lock.json  package.json
(+177 files in other folders)
