[project]
name = "api-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Russell Tan",email = "sellnat77@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "strawberry-graphql[cli] (>=0.288.2,<0.289.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "strawberry-sqlalchemy-mapper (>=0.8.0,<0.9.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "boto3 (>=1.42.59,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "botocore (>=1.42.97,<2.0.0)",
    "sqlakeyset (>=2.0.1762907931,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "vulture (>=2.16,<3.0)",
    "alembic-postgresql-enum (>=1.10.0,<2.0.0)",
]

[tool.poetry]
packages = [{include = "app"}]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^26.3.1"
isort = "^8.0.1"
deptry = "^0.25.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
