[project]
name = "app"
version = "0.1.0"
description = "Flask app to facilitate CV"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
